<resources>
    <string name="app_name">匯率計算小幫手</string>
    <string name="last_update">"匯率更新時間："</string>
    <string name="reset">歸零</string>
    <string name="modify">修改</string>
    <string name="plus">+</string>
    <string name="sub">—</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="update_ok">匯率更新完成</string>
    <string name="update_failed">無法更新匯率</string>
    <string name="current">貨幣單位：</string>
    <string name="refresh_rate">更新匯率</string>
    <string name="setting">設定</string>
    <string name="rate_info">匯率資訊</string>
    <string name="enter_num">請輸入金額</string>

    <string name="twd">新台幣　(TWD)</string>
    <string name="usd">美金　　(USD)</string>
    <string name="hkd">港幣　　(HKD)</string>
    <string name="gbp">英鎊　　(GBP)</string>
    <string name="aud">澳幣　　(AUD)</string>
    <string name="cad">加拿大幣(CAD)</string>
    <string name="sgd">新加坡幣(SGD)</string>
    <string name="chf">瑞士法郎(CHF)</string>
    <string name="jpy">日圓　　(JPY)</string>
    <string name="zar">南非幣　(ZAR)</string>
    <string name="sek">瑞典幣　(SEK)</string>
    <string name="nzd">紐元　　(NZD)</string>
    <string name="thb">泰幣　　(THB)</string>
    <string name="php">菲國比索(PHP)</string>
    <string name="idr">印尼幣　(IDR)</string>
    <string name="eur">歐元　　(EUR)</string>
    <string name="krw">韓元　　(KRW)</string>
    <string name="vnd">越南盾　(VND)</string>
    <string name="myr">馬來幣　(MYR)</string>
    <string name="cny">人民幣　(CNY)</string>

    <string name="twd_short">新台幣</string>
    <string name="usd_short">美金</string>
    <string name="hkd_short">港幣</string>
    <string name="gbp_short">英鎊</string>
    <string name="aud_short">澳幣</string>
    <string name="cad_short">加拿大幣</string>
    <string name="sgd_short">新加坡幣</string>
    <string name="chf_short">瑞士法郎</string>
    <string name="jpy_short">日圓</string>
    <string name="zar_short">南非幣</string>
    <string name="sek_short">瑞典幣</string>
    <string name="nzd_short">紐元</string>
    <string name="thb_short">泰幣</string>
    <string name="php_short">菲國比索</string>
    <string name="idr_short">印尼幣</string>
    <string name="eur_short">歐元</string>
    <string name="krw_short">韓元</string>
    <string name="vnd_short">越南盾</string>
    <string name="myr_short">馬來幣</string>
    <string name="cny_short">人民幣</string>
</resources>
