<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    tools:context="com.aaronlife.ratecalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_message">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_big"
            android:layout_gravity="center"
            android:layout_margin="@dimen/side_margin"
            android:background="@color/color_message"
            android:onClick="onRefreshRate"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_popup_sync" />

        <TextView
            android:id="@+id/txt_update_time"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_big"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/last_update"
            android:textSize="@dimen/text_size_small"
            android:typeface="sans" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_size_big"
            android:layout_gravity="top|end"
            android:gravity="top|end"
            android:textSize="10dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="5.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="1.2">

        <TextView
            android:id="@+id/txt_currency"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_message"
            android:gravity="center_horizontal|bottom"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/color_message"
            android:ellipsize="none"
            android:gravity="end|bottom"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:textSize="@dimen/text_size_huge" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="0.6"
        android:background="@color/color_message"
        android:fontFamily="monospace"
        android:gravity="end|top"
        android:paddingRight="2dp"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="1.5">

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="1"
            android:text="1"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="2"
            android:text="2"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="3"
            android:text="3"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="0.8"
            android:background="@color/color_button"
            android:onClick="modify"
            android:text="@string/modify"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="1.4">

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="4"
            android:text="4"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="5"
            android:text="5"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="6"
            android:text="6"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="0.8"
            android:background="@color/color_button"
            android:onClick="clear"
            android:text="@string/reset"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="1.4">

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="7"
            android:text="7"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="8"
            android:text="8"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="9"
            android:text="9"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="0.8"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="+"
            android:text="@string/plus"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_weight="1.3">

        <ImageButton
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="rateInfo"
            android:src="@android:drawable/ic_dialog_info" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="0"
            android:text="0"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="."
            android:text="."
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />

        <Button
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="0.8"
            android:background="@color/color_button"
            android:onClick="calculator"
            android:tag="-"
            android:text="@string/sub"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size_big" />
    </LinearLayout>

</LinearLayout>